Fix overlap issue for screens < 480px

--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ html {
 
 @media (max-width: 480px) {
     .sub-title {
-        margin-top: 20px;
+        margin-top: 25px;
     }
 }
 
